@@ -6,3 +6,4 @@ co.elastic.apm.agent.logging.LoggingConfiguration
 co.elastic.apm.agent.impl.context.web.WebConfiguration
 co.elastic.apm.agent.configuration.MessagingConfiguration
 co.elastic.apm.agent.impl.circuitbreaker.CircuitBreakerConfiguration
+co.elastic.apm.agent.configuration.MetricsConfiguration
