@@ -15,6 +15,7 @@
 
         <!-- micrometer is compiled for java8 -->
         <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
     </properties>
 
     <dependencies>
